--- a/Plant/Areas/Admin/Views/AdminProducts/AddColor.cshtml
+++ b/Plant/Areas/Admin/Views/AdminProducts/AddColor.cshtml
@@ -34,24 +34,12 @@
                     <div class="row">
                         <div class="col-md-3 col-sm-6 col-6">
                             <label class="mb-1 text-primary font-weight-bold"><i class="far fa-font"></i> Chọn màu sắc</label>
-                            <select class="form-control custom-select" asp-for="Color">
-                                <option value="Default">Default</option>
-                                <option value="white">Trắng</option>
-                                <option value="yellow">Vàng</option>
-                                <option value="orange">Cam</option>
-                                <option value="pink">Hồng</option>
-                                <option value="purple">Tím</option>
-                                <option value="red">Đỏ</option>
-                                <option value="green">Xanh lá</option>
-                                <option value="blue">Xanh biển</option>
-                                <option value="gray">Xám</option>
-                                <option value="brown">Nâu</option>
-                                <option value="black">Đen</option>
-                            </select>
+                            <input asp-for="Color" type="text" class="form-control" placeholder="Nhập màu sắc sản phẩm...">
+                            <small class="form-text text-muted">Nếu sản phẩm không phân loại theo màu sắc vui lòng nhập: default</small>
                         </div>
                         <div class="form-group col-md-4 col-sm-6">
                             <label class="mb-1 text-primary font-weight-bold"><i class="far fa-font"></i> Lượng hàng</label>
-                            <input asp-for="Stock" type="number" class="form-control" id="control1" placeholder="Nhập số lượng sản phẩm trong kho...">
+                            <input asp-for="Stock" type="number" class="form-control"  placeholder="Nhập số lượng sản phẩm trong kho...">
                         </div>
                     </div>
                     <div class="form-group my-2 d-flex align-items-center">
