--- a/Plant/Areas/Admin/Views/AdminProducts/EditColor.cshtml
+++ b/Plant/Areas/Admin/Views/AdminProducts/EditColor.cshtml
@@ -40,20 +40,8 @@
                                 </div>
                                 <div class="col-md-3">
                                     <label class="mb-1 text-primary font-weight-bold"><i class="far fa-font"></i> Chọn màu sắc</label>
-                                    <select class="form-control custom-select" asp-for="Color">
-                                        <option value="Default">Default</option>
-                                        <option value="white">Trắng</option>
-                                        <option value="yellow">Vàng</option>
-                                        <option value="orange">Cam</option>
-                                        <option value="pink">Hồng</option>
-                                        <option value="purple">Tím</option>
-                                        <option value="red">Đỏ</option>
-                                        <option value="green">Xanh lá</option>
-                                        <option value="blue">Xanh biển</option>
-                                        <option value="gray">Xám</option>
-                                        <option value="brown">Nâu</option>
-                                        <option value="black">Đen</option>
-                                    </select>
+                                    <input asp-for="Color" type="text" class="form-control" placeholder="Nhập màu sắc sản phẩm...">
+                                    <small class="form-text text-muted">Nếu sản phẩm không phân loại theo màu sắc vui lòng nhập: default</small>
                                 </div>
                                 <div class="form-group col-md-3">
                                     <label class="mb-1 text-primary font-weight-bold"><i class="far fa-font"></i> Lượng hàng</label>
